fix: Set input-date text-align to left on ios safari

--- a/src/components/form/_date.scss
+++ b/src/components/form/_date.scss
@@ -1,33 +1,37 @@
 // :not(.dummy-class) are needed to add specificity and avoid !important on padding
 input:is(
-		[type='date'],
-		[type='datetime-local'],
-		[type='month'],
-		[type='time'],
-		[type='week']
-	) {
-	background-image: var(--icon-calendar-light);
-	background-position: center left var(--size-2);
-	background-repeat: no-repeat;
-	background-size: var(--size-3) auto;
-	padding-left: calc(var(--size-3) * 2);
-	position: relative;
+    [type='date'],
+    [type='datetime-local'],
+    [type='month'],
+    [type='time'],
+    [type='week']
+  ) {
+  background-image: var(--icon-calendar-light);
+  background-position: center left var(--size-2);
+  background-repeat: no-repeat;
+  padding-left: var(--size-7);
+  position: relative;
+  text-align: left;
   width: 100%;
-	// On mobiles it's collapsed
-	min-height: var(--size-7);
+  // On mobiles it's collapsed
+  min-height: var(--size-7);
+
+  &::-webkit-date-and-time-value {
+    text-align: left;
+  }
 }
 
 // Firefox overwrite
 @-moz-document url-prefix() {
-	input:is(
-			[type='date'],
-			[type='datetime-local'],
-			[type='month'],
-			[type='time'],
-			[type='week']
-		):not(.dummy-class) {
-		padding-left: var(--size-2);
-	}
+  input:is(
+      [type='date'],
+      [type='datetime-local'],
+      [type='month'],
+      [type='time'],
+      [type='week']
+    ):not(.dummy-class) {
+    padding-left: var(--size-2);
+  }
 }
 
 // Calendar picker
@@ -36,25 +40,25 @@ input:is(
 [type='month'],
 [type='time'],
 [type='week'] {
-	&::-webkit-calendar-picker-indicator {
-		margin-left: var(--size-1);
-		margin-right: calc(var(--size-3) * -1);
-		opacity: 0;
-		position: absolute;
-		left: var(--size-1);
-		width: var(--size-3);
-	}
+  &::-webkit-calendar-picker-indicator {
+    margin-left: var(--size-1);
+    margin-right: calc(var(--size-3) * -1);
+    opacity: 0;
+    position: absolute;
+    left: var(--size-1);
+    width: var(--size-3);
+  }
 }
 
 // Calendar icons are hidden in Firefox
 @-moz-document url-prefix() {
-	[type='date'],
-	[type='datetime-local'],
-	[type='month'],
-	[type='time'],
-	[type='week'] {
-		// stylelint-disable declaration-no-important
-		background-image: none !important;
-		padding-right: var(--size-1p5) !important;
-	}
+  [type='date'],
+  [type='datetime-local'],
+  [type='month'],
+  [type='time'],
+  [type='week'] {
+    // stylelint-disable declaration-no-important
+    background-image: none !important;
+    padding-right: var(--size-1p5) !important;
+  }
 }
